# qde

./: .gitignore  README.md  flake.nix  pyproject.toml
nix/package/: default.nix
nix/package/app-launcher/: default.nix
nix/package/clipboard/: default.nix
nix/package/music-notify/: default.nix
nix/package/system-info/: default.nix
nix/package/system-menu/: default.nix
qtile/config/: ReadMe.md  __init__.py  bars.py  debug.py  deref.py  floating.py  fs.py  group.py  merge.py  output.py  scratchpad.py  terminal.py  typedef.py
qtile/config/anchor/: __init__.py  typedef.py
qtile/config/builder/: buttons.py  group.py  keys.py
qtile/config/color/: __init__.py  typedef.py
qtile/config/input/: keyboard.py  mouse.py
qtile/config/qbar/: context.py
qtile/config/qmodule/: base.py  context.py  cpu_temp_status.py  cpu_usage_status.py  current_layout.py  date_time.py  group_box.py  line_sep.py  memory_status.py  music_status.py  network_status.py  spacer.py  system_menu.py  volume_status.py  weather.py  window_name.py
qtile/config/qwidget/: icon.py  net_min.py
qtile/config/setting/: default.py  loader.py  model.py  typedef.py
qtile/config/theme/: default.py  deref.py  iter.py  loader.py  palette.py  typedef.py
qtile/config/wallpaper/: __init__.py  hyprpaper.py  typedef.py  waypaper.py
qtile/tests/: conftest.py  test_bars.py  test_deref.py  test_margin.py  test_setting_loader.py  test_theme_loader.py  test_wallpaper.py
qtile/tests/anchor/: test_anchor.py  test_margin.py
qtile/tests/bar/: test_iter.py
qtile/tests/data/: hyprpaper.conf  input.yaml  (+3 more)
(+23 files in other folders)
